--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Ayush Vanvary Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
 </head>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        With a strong foundation as a BCA graduate and a keen interest in backend development, I have
+                        Hi my name is Ayush Vanvary, With a strong foundation as a BCA graduate and a keen interest in backend development, I have
                         honed my expertise in Python Django and MySQL. Furthermore, my two-year experience as a Java
                         tutor has strengthened my communication skills and deepened my understanding of programming
                         concepts. Building upon my academic achievements, I recently completed an MCA through distance
@@ -245,7 +245,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-                <p><a href="mailto:examplemail@gmail.com">ayush.vanvary10@gmail.com</a></p>
+                <p><a href="mailto:ayush.vanvary10@gmail.com">ayush.vanvary10@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
