--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
-                        <p>2+ years <br />Java Tutor</p>
+                        <p>3+ years <br />Java Tutor</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
@@ -250,7 +250,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-                <p><a href="https://www.linkedin.com/in/ayushvanvary/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/ayushvanvary/">LinkedIn/Ayush-Vanvary</a></p>
             </div>
         </div>
     </section>
@@ -265,7 +265,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 Vanvary. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Vanvary. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
