--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Hi my name is Ayush Vanvary, With a strong foundation as a BCA graduate and a keen interest in backend development, I have
-                        honed my expertise in Python Django and MySQL. Furthermore, my two-year experience as a Java
-                        tutor has strengthened my communication skills and deepened my understanding of programming
-                        concepts. Building upon my academic achievements, I recently completed an MCA through distance
-                        education, further enhancing my qualifications. Now, I am enthusiastic about channeling my
-                        diverse skill set and knowledge into contributing to cutting-edge backend development projects,
-                        with the aim of making a lasting impact in the world of technology.
+                       I am a passionate backend developer with a strong foundation in computer applications, holding both a BCA and an MCA. 
+                       My technical expertise lies in Python Django and MySQL, which I have honed through diverse freelance projects. 
+                       Over the past two years, I have successfully delivered numerous backend solutions, showcasing my ability to adapt to various client needs and project requirements.
+                       My freelance work has sharpened my problem-solving skills and given me a deep understanding of web development principles.
+                       I am enthusiastic about leveraging my comprehensive skill set and freelance experience to contribute to cutting-edge backend development projects, aiming to make a significant impact in the technology sector.
+
+
                     </p>
                 </div>
             </div>
