--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="title">Ayush Vanvary</h1>
             <p class="section__text__p2">Backend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-Ayush.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/ayush_vanvary_resume_2024.pdf')">
                     Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -75,7 +75,9 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
-                        <p>3+ years <br />Java Tutor</p>
+                        <p>1+ years <br />Django Freelancer</p>
+                        <p>3+ years <br />Programming Tutor</p>
+                        
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
