--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
                     <div class="article-container">
                         <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Youtber and Client Mediator Web App</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://ayushv01.pythonanywhere.com/'">
                             Live Demo
                         </button>
                     </div>
@@ -214,7 +214,7 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">E-commerce T-shirt Store</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                             Github
