--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">E-commerce T-shirt Store</h2>
+                    <h2 class="experience-sub-title project-title">E-commerce LCO Clone</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://ecommproject.netlify.app/'">
                             Live Demo
                         </button>
                     </div>
